gh actions: trying codecov again

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,6 +12,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@master
 
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
