--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # Test binary, built with `go test -c`
 *.test
 
+# Test coverage files
+coverage.txt
+
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
